--- a/spices/cix-gawk.org
+++ b/spices/cix-gawk.org
@@ -1,6 +1,6 @@
 # File       : cix-awk.org
 # Created    : <2016-11-04 Fri 22:15:18 GMT>
-# Modified   : <2018-1-02 Tue 23:10:14 GMT> Sharlatan
+# Modified   : <2018-12-02 Sun 00:43:35 GMT> Sharlatan
 # Author     : sharlatan
 # Maintainer :
 # Sinopsis   : The GNU version of the AWK text processing utility
@@ -84,7 +84,7 @@ measure total bytes writen since system boot, Linux:
 
   KERNEL_RELEASE="$(uname -r | sed 's/\.//g')"
 
-  if [ "${KERNEL_RELEASE:0:2}" -gt "26" ]; then
+  if [[ "${KERNEL_RELEASE:0:2}" -gt "26" ]]; then
       echo "Total Bytes Writen (TBW)"
       awk '/sd/ {print $3"\t"$10 / 2 / 1024, "MB"}' /proc/diskstats
   else
@@ -131,26 +131,32 @@ print file name and the last line for the list of files:
 **** awk-171211191635
 remove n-th (2nd in this example) field from the end of the each line of input_f:
 :    ~$ awk 'NF>1{$(NF-1)=""};1' input_f
-
-**** awk-180102230353
-print form line number to end of file:
-:    ~$ awk 'NR>=5' input_f
-**** awk-180102230535
-print from line number 4 to 9 or print lines between linen number 3 and 10:
-:    ~$ awk 'NR>=4 && NR<=9' input_f
-**** awk-180102230659
-print all even or odd lines numbers:
-:    ~$ awk '{if (NR%2 == 0) {print $1}}' input_f
-:    ~$ awk '{if (NR%s != 0) {print $1}}' input_f
-*** awk::files
-*** awk::see-also
-    egrep(1), sed(1), getpid(2), getppid(2), getpgrp(2), getuid(2), geteuid(2),
-    getgid(2), getegid(2), getgroups(2), usleep(3)
 **** awk-170917194956 
 list UserName UserID and GroupID in readable format:
 :    ~$ awk -F: '{ print "UN: " $1"*" "UID: " $3"*" "GID: " $4 }' /etc/passwd | column -t -s '*' | nl
 [[file::*coulmn][coulmn]] [[file:./cix-gnu-coreutils.org::*nl][nl]]
 
+**** awk-180102230353
+print from line number to end of file:
+:    ~$ awk 'NR>=5' input_f
+
+**** awk-180102230535
+print from line number 4 to 9 or print lines between linen number 3 and 10:
+:    ~$ awk 'NR>=4 && NR<=9' input_f
+
+**** awk-180102230659
+print all even or odd lines numbers:
+:    ~$ awk '{if (NR%2 == 0) {print $1}}' input_f
+:    ~$ awk '{if (NR%s != 0) {print $1}}' input_f
+
+**** awk-181202003745
+show accounts with 0 lenth password:
+:    ~# awk -F: '($2==""){print $1}'
+
+*** awk::files
+*** awk::see-also
+egrep(1), sed(1), getpid(2), getppid(2), getpgrp(2), getuid(2), geteuid(2),
+getgid(2), getegid(2), getgroups(2), usleep(3)
 * References
 ** Boooks
 - Alfred V. Aho, Brian W. Kernighan, Peter J. Weinberger;
