--- a/README.org
+++ b/README.org
@@ -1,6 +1,6 @@
 # File     : README.org
 # Created  : <2016-11-16 Wed 00:51:06 GMT>
-# Modified : <2018-11-05 Mon 22:11:31 GMT> Sharlatan
+# Modified : <2019-2-01 Fri 23:21:49 GMT> Sharlatan
 # Author   : sharlatan
 # Short    : README-en
 
@@ -47,87 +47,89 @@ cix
 #+END_SRC
 
 #+RESULTS:
-#+BEGIN_SRC org
+#+begin_src org
 Distribution per command:
 
-QTY  CMD         PKG
----  ---         ---
-33   tcpdump     tcpdump
-18   sed         sed
-18   awk         gawk
-10   find        gnu-findutils
-10   dd          gnu-coreutils
-7    chmod       gnu-coreutils
-6    ls          gnu-coreutils
-5    strace      strace
-5    nc          netcat
-5    mount       util-linux
-5    lspci       pciutils
-5    grep        gnu-grep
-5    git         git
-4    tr          gnu-coreutils
-4    tar         tar
-4    ss          iproute2
-4    paste       gnu-coreutils
-4    lsof        lsof
-4    curl        curl
-4    column      util-linux
-3    xargs       gnu-findutils
-3    udevadm     systemd
-3    ssh         openssh
-3    dpkg        dpkg
-2    wget        wget
-2    tee         gnu-coreutils
-2    sort        gnu-coreutils
-2    rsync       rsync
-2    objdump     gnu-binutils
-2    nohup       gnu-coreutils
-2    ncat        ncat
-2    mv          gnu-coreutils
-2    gpg         gnu-pg
-1    while       gnu-bash
-1    whatis      man-db
-1    usermod     shadow-utils
-1    uniq        gnu-coreutils
-1    top         procps-ng
-1    timeout     gnu-coreutils
-1    strings     gnu-binutils
-1    ssh-keygen  openssh
-1    smem        smem
-1    set         gnu-bash
-1    seq         gnu-coreutils
-1    rm          gnu-coreutils
-1    rev         util-linux
-1    pwd         gnu-coreutils
-1    ps          procps-ng
-1    printf      gnu-bash
-1    pkill       procps-ng
-1    ping        iputils
-1    perf        perf
-1    pacman      pacman
-1    nm          gnu-binutils
-1    mktemp      gnu-coreutils
-1    mkdir       gnu-coreutils
-1    lsblk       util-linux
-1    locate      mlocate
-1    ln          gnu-coreutils
-1    ldd         glibc
-1    jq          jq
-1    journalctl  systemd
-1    ip          iproute2
-1    gpasswd     shadow-utils
-1    flock       util-linux
-1    file        file
-1    expr        gnu-coreutils
-1    exportfs    nfs
-1    du          gnu-coreutils
-1    dnf         dnf
-1    cut         gnu-coreutils
-1    comm        gnu-coreutils
-1    command     gnu-bash
-1    base64      gnu-coreutils
-1    aptitude    aptitude
-1    aprping     iputils
+QTY  CMD          PKG
+---  ---          ---
+33   tcpdump      tcpdump
+19   awk          gawk
+18   sed          sed
+10   find         gnu-findutils
+10   dd           gnu-coreutils
+7    chmod        gnu-coreutils
+6    ls           gnu-coreutils
+5    strace       strace
+5    nc           netcat
+5    mount        util-linux
+5    lspci        pciutils
+5    grep         gnu-grep
+5    git          git
+4    tr           gnu-coreutils
+4    tar          tar
+4    ss           iproute2
+4    paste        gnu-coreutils
+4    lsof         lsof
+4    curl         curl
+4    column       util-linux
+3    xargs        gnu-findutils
+3    udevadm      systemd
+3    ssh          openssh
+3    dpkg         dpkg
+2    wget         wget
+2    tee          gnu-coreutils
+2    ssh-keygen   openssh
+2    sort         gnu-coreutils
+2    rsync        rsync
+2    objdump      gnu-binutils
+2    nohup        gnu-coreutils
+2    ncat         ncat
+2    mv           gnu-coreutils
+2    ip           iproute2
+2    gpg          gnu-pg
+1    while        gnu-bash
+1    whatis       man-db
+1    usermod      shadow-utils
+1    uniq         gnu-coreutils
+1    top          procps-ng
+1    timeout      gnu-coreutils
+1    strings      gnu-binutils
+1    ssh-copy-id  openssh
+1    smem         smem
+1    set          gnu-bash
+1    seq          gnu-coreutils
+1    rm           gnu-coreutils
+1    rev          util-linux
+1    pwd          gnu-coreutils
+1    ps           procps-ng
+1    printf       gnu-bash
+1    pkill        procps-ng
+1    ping         iputils
+1    perf         perf
+1    pacman       pacman
+1    nm           gnu-binutils
+1    mktemp       gnu-coreutils
+1    mkdir        gnu-coreutils
+1    lsblk        util-linux
+1    locate       mlocate
+1    ln           gnu-coreutils
+1    ldd          glibc
+1    jq           jq
+1    journalctl   systemd
+1    gpasswd      shadow-utils
+1    flock        util-linux
+1    file         file
+1    expr         gnu-coreutils
+1    exportfs     nfs
+1    du           gnu-coreutils
+1    dnf          dnf
+1    cut          gnu-coreutils
+1    comm         gnu-coreutils
+1    command      gnu-bash
+1    blktrace     blktrace
+1    base64       gnu-coreutils
+1    aptitude     aptitude
+1    aprping      iputils
 
 Distribution per package:
 
@@ -135,19 +137,19 @@ QTY  PKG
 ---  ---
 52   gnu-coreutils
 33   tcpdump
+19   gawk
 18   sed
-18   gawk
 13   gnu-findutils
 12   util-linux
+6    openssh
+6    iproute2
 5    strace
 5    pciutils
 5    netcat
-5    iproute2
 5    gnu-grep
 5    git
 4    tar
 4    systemd
-4    openssh
 4    lsof
 4    gnu-binutils
 4    gnu-bash
@@ -170,10 +172,11 @@ QTY  PKG
 1    glibc
 1    file
 1    dnf
+1    blktrace
 1    aptitude
 
 Distribution per example:
 
-Onliners:  273
+Onliners:  280
 Scripts:   108
-#+END_SRC
+#+end_src
